Fix bugs in map keys and groups. Fix code smells.